css/style.css
body {
  background-color: #000000;
  color: #ffffff;
}
logo {
  font-size: 27px;
}
nav {
  background-color: #FF0000;
  padding: 20px;
  text-align: center;
}
nav a {
  color: #000000;
  text-decoration: none;
  margin: 15px;
  font-size: 18px;
}
.hero {
  height: 80vh;
  display: flex;
  justify-content: center;
  align: center;
  text-align: center;
}

